fix scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,8 @@ body {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: auto;
+  /* overflow-y: auto; */
+  overflow-y: scroll;
 }
 
 .app-sidebar > div:first-child {
